# OpenGLViewer

./: CMakeLists.txt  Figure.h  Triangle.cpp  Triangle.h  Vector.h  VectorImp.hpp  entityRelationship  entityRelationship.drawio  main.cpp  scene.json
src/: Point.cpp  Renderer.cpp  Renderer.hpp  Shape.cpp  main.cpp
src/Math/: Point.hpp  Vector.cpp  Vector.hpp
src/Scene/: Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/Shapes/: Circle.cpp  Circle.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp
